--- a/Basic_HTML_5.html
+++ b/Basic_HTML_5.html
@@ -2,6 +2,6 @@
 <html>
 	<body>
 		<link rel = "stylesheet" type = "text/css" href = "Basic_CSS_2.css">
-		<p>&#8364 Styled font.  &reg</p>
+		<p style="font-size:50px">&#8364 Styled font.  &reg</p>
 	</body>
 </html>
